5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1758_1583.log
== TEST (2019-05-29 21:44:47) 
-- CODE:
a = input("numero")
i = 2
while(i<size(i)):
	frase = a[i] + "."
	i+3
print(frase)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(i<size(i)):
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:44:57) 
-- CODE:
a = input("numero: ")
i = 2
while(i<size(i)):
	frase = a[i] + "."
	i+3
print(frase)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(i<size(i)):
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:47:39) 
-- CODE:
a = input("numero: ")
i = 2
while(i<size(a)):
	frase = a[i] + "."
	i+3
print(frase)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(i<size(a)):
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:48:10) 
-- CODE:
from numpy import*
a = input("numero: ")
i = 2
while(i<size(a)):
	frase = a[i] + "."
	i+3
print(frase)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:51:30) 
-- CODE:
from numpy import*
a = input("numero: ")
i = 2
while(i<size(a)):
	frase = a[i] + "."
	i+3
print(frase)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:51:50) 
-- CODE:
from numpy import*
a = input("numero: ")
i = 2
while(i<size(a)):
	frase = a[i] + "."
	i+3
	print(frase)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:52:04) 
-- CODE:
from numpy import*
a = input("numero: ")
i = 2
while(i<size(a)):
	frase = a[i] + "."
	i+3
print(frase)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:52:17) 
-- CODE:
from numpy import*
a = input("numero: ")
i = 2
while(i<size(a)):
	frase = a[i] + "."
	i = i +3
print(frase)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:53:09) 
-- CODE:
from numpy import*
a = input("numero: ")
i = 2
frase = 0
while(i<size(a)):
	frase = frase + a[i] + "."
	i = i +3
print(frase)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:54:23) 
-- CODE:
from numpy import*
a = input("numero: ")
i = 2
frase = 0
while(i < size(a)):
	frase = frase + a[i] + "."
	i = i + 3
	print(frase)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:54:31) 
-- CODE:
from numpy import*
a = input("numero: ")
i = 2
frase = 0
while(i < size(a)):
	frase = frase + a[i] + "."
	i = i + 3
	print(frase)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:56:32) 
-- CODE:
from numpy import*
a = input("numero: ")
i = 2
frase = 0
p = "."
while(i < size(a)):
	frase = frase + a[i] + p
	i = i + 3
	print(frase)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:01:46) 
-- CODE:
from numpy import*
a = input("numero: ")
i = 2
frase = ""
p = str(".")
while(i < size(a)):
	frase = a[i] + p
	i = i + 3
print(frase)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:01:58) 
-- CODE:
from numpy import*
a = input("numero: ")
i = 2
frase = ""
p = str(".")
while(i < size(a)):
	frase = a[i] + p
	i = i + 3
print(frase)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:02:58) 
-- CODE:
from numpy import*
a = input("numero: ")
i = 2
while(i < size(a)):
	frase = a[i] + "."
	i = i + 3
print(frase)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:10:14) 
-- CODE:
from numpy import*
a = input("numero: ")
i = 2
while(i < lem(a)):
	frase = a[i] + "."
	i = i + 3
print(frase)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:12:09) 
-- CODE:
from numpy import*
a = input("numero: ")
i = 2
while(i < len(a)):
	frase = a[i] + "."
	i = i + 3
print(frase)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:13:35) 
-- CODE:
from numpy import*
a = input("numero: ")
i = 2
while(i < len(a)):
	frase += a[i] + "."
	i = i + 3
print(frase)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:14:04) 
-- CODE:
from numpy import*
a = input("numero: ")
i = 2
frase = ""
while(i < len(a)):
	frase += a[i] + "."
	i = i + 3
print(frase)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:16:20) 
-- CODE:
from numpy import*
a = input("numero: ")
i = 2
frase = ""
while(i=< len(a)):
	frase += a[i-2] + a[i-1] + a[i] + "."
	i = i + 3
print(frase)
-- ERROR:
File "XXXX", line 5
    while(i=< len(a)):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:17:04) 
-- CODE:
from numpy import*
a = input("numero: ")
i = 2
frase = ""
while(i < len(a)):
	frase += a[i-2] + a[i-1] + a[i] + "."
	i = i + 3
print(frase)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:17:14) 
-- CODE:
from numpy import*
a = input("numero: ")
i = 2
frase = ""
while(i <= len(a)):
	frase += a[i-2] + a[i-1] + a[i] + "."
	i = i + 3
print(frase)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
